# nrsc5-gui-plusplus

./: CMakeLists.txt  LICENSE.md  README.md  nrsc5-gui-plusplus.pro
src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  nrsc.cpp  nrsc.h  version.h
